Temp update to site- redesign.

--- a/css/vagnini.css
+++ b/css/vagnini.css
@@ -1,10 +1,20 @@
 body {
-background-color:#0b2c6f;
+/* background-color:#0b2c6f; */
+background-image: url("/images/backgrounds/bg11.jpg");
 }
 h2, h3, p, li {
-color:#fff;
+color:#0b2c6f;
 }
 a {
-/*color:#644811;*/
-color:#fff;
+/*color:#644811;
+color:#fff;*/
+color:#0b2c6f;
+}
+.bars {
+background: #5e5145;
+width:35%;
+height:100%;
+padding: 10px;
+margin: auto
+/* #543315; */
 }
